gst/videoparsers/gsth265parse.c
@@ -2200,8 +2200,8 @@ gst_h265_parse_update_src_caps (GstH265Parse * h265parse, GstCaps * caps)
         gst_caps_set_simple (caps, "profile", G_TYPE_STRING, profile, NULL);
 
       if (sps->profile_tier_level.interlaced_source_flag)
-        gst_caps_set_simple (caps, "interlace-mode", G_TYPE_STRING, "alternate",
-            NULL);
+        gst_caps_set_simple (caps, "interlace-mode", G_TYPE_STRING,
+            "interleaved", NULL);
 
       tier = get_tier_string (sps->profile_tier_level.tier_flag);
       if (tier != NULL)
